<resources>
    <string name="app_name">MoneyManager</string>
    <string name="menu_home">Home</string>
    <string name="menu_statistic">Statistic</string>
    <string name="menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backward_ic"><![CDATA[<-]]></string>
    <string name="forward_ic"><![CDATA[->]]></string>
    <string name="month_year">August 2024</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="dayofmonth">1</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_input">Input</string>
    <string name="expense_btn">Expense</string>
    <string name="income_btn">Income</string>
    <string name="_6_8_2024_tue">6.8 2024 (Tue)</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="btnback"><![CDATA[<]]></string>
    <string name="btnNext"><![CDATA[>]]></string>
    <string name="enter_value">Enter value</string>
    <string name="expense_tv">Expense</string>
    <string name="_0">0</string>
    <string name="submit_btn">Submit</string>
    <string name="income_tv">Income</string>
    <string name="total">Total</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account_register_here">Don\'t have account? Register Here</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log in</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_log_in">Already have an account!</string>
    <string name="delete">Delete</string>
</resources>