<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_nav"/>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:id="@+id/btn_statistic"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/img_statistic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_statistic"/>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_input"
                android:layout_below="@+id/img_statistic"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_home"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/img_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_home"/>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_calendar"
                android:layout_below="@+id/img_home"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_profile"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/img_setting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_profile"/>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting"
                android:layout_below="@+id/img_setting"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>